--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,69 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+* {
+  font-family: monospace;
+  box-sizing: border-box;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.navbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 10px 20px;
+  background-color: rgba(0, 0, 0, 0.78);
+  height: 80px;
+}
+.user-details {
+  display: flex;
+  justify-content: space-evenly;
+  margin-right: 20px;
+}
+.user-details img {
+  border-radius: 50%;
+  margin: 10px 20px;
+}
+.user-details button {
+  background-color: aqua;
+  border-radius: 10px;
+  height: 30px;
+  margin: 10px 20px;
+  cursor: pointer;
+}
+.links {
+  display: flex;
+  list-style: none;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.links a {
+  margin: 20px 30px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form {
+  margin-top: 100px;
+}
+.form input {
+  color: black;
+}
+.form textarea {
+  color: black;
+}
+.post {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+  justify-content: space-around;
+  align-items: center;
+  width: 400px;
+  margin-left: 600px;
+  border: 1px solid black;
+  box-sizing: border-box;
+  box-shadow: 1px dimgray;
+  border-radius: 5px;
+}
+.post p,
+h2,
+h1 {
+  color: black;
 }
